--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site use position stack to retrive the geocode by user input and provide a forcast for that location</p>
         <img class="protrite" src="/img/profileImg.png" alt="">
     </div>
 
