--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site use position stack to retrive the geocode by user input and provide a forcast for that location</p>
-        <img class="protrite" src="/img/profileImg.png" alt="">
+        <p><img class="protrite" src="https://lh3.googleusercontent.com/pw/ADCreHdfQhUKLVbzsx_nLPlNGCqMStPQbQO3hwCc3cq8h4ikc2Qv8EOeapEVBuuqLz9Yw5TUnrDzdQDafAKIo-CX9WJy8Jc32X3fOuobPXflOGjHyFh_FWj4xN26L0AS8XH8fhbeEoS2bRUlG-Q3-gbuqIC78FW3_gRlJ8_OyZIwqDHg2xTtdlId___5KxeV0gS1iqFP1FVDW8APwV7ZTNXVIGGB_d2exIDbATlgRkVMBmmu3y3Pa2AJlgvGvo4RXXC1VrNHyPEow7jiMLy8x4Kf3Sp_voYO78vAQ5vDA4PEClb90l-sMfmdkceFnShYB6_lYG9N-lyLGgnl7ZMlWJeUw5A00tfZzEIy-2z5CLe-IoNp1jlhufHh0jGDmxmUhW96elCN5VJW2lmSYRBiIhrsG8I-GYeN2LkYeh4YUPa9lI5kfB47F2dE4xqzlUJlT2agujRCz88Hp5DCUjb2YFlQIKrukYadJD1p7KVjHoC0IGiNknAv70bt6_3GXy1obh4QuaO-WnW3lNnIfyk-UA6it1X3xBphxQ-D0YEIYJ7NRRo2HrjJQHmdv9V-9P99J4vOzw9rFxIV0U6jHRRYDLTYy5Rubagf-BLVI8qFH8RB10UNBBvd3UWWtJa5JVxpbNAE-S03yK70CLOzLht8lewDvTXS4sBUvS6LOCLyS1VFW5j1FIwbiiCuxSqOk4r0n6Et4pwqUXAWzjKK1fsT_fVr_LV3LuZvW41tye0T3UA2WGswnZ3lZqC-4HZJr2UZsQM5jEP5e1A3Tmnlk5iyzom7V7ksHZZdHLOdrvjscGWVvTPmGiBta7dEyUJGfnTKIY5FeNYyg5UtnDwX9A2l6Mu7onzUVkqeLGBHUmAbfmggrHDKJm5eCmFwW1xHZavuSdeBBura1FP7HVgoWpAa=w640-h640-s-no-gm?authuser=0" alt=""></p>
     </div>
 
     {{>footer}}
